--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>❤️</text></svg>" />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Inter:wght@400;900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LoveQuest ❤️ - Una invitación especial Ami y Totito</title>
+    <title>clea</title>
     <style>
       body { margin: 0; background-color: #FFF5F7; font-family: 'Inter', sans-serif; }
     </style>
